--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="good-afternoon">
+  <body class="good-morning">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="dialog-root"></div>
